# storyland-ai

./: .env.example  .gitignore  DATABASE_SCHEMA.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt  sessions_memory_demo.ipynb  storyland_ai_demo.ipynb  storyland_ai_demo_modular.ipynb  storyland_showcase.ipynb  streamlit_demo.py
agents/: __init__.py  book_context_agent.py  book_metadata_agent.py  discovery_agents.py  orchestrator.py  reader_profile_agent.py  region_analyzer_agent.py  trip_composer_agent.py
agents/storyland/: __init__.py  agent.py  single_test.evalset.json  storyland_eval.evalset.json
common/: __init__.py  config.py  logging.py
docs/: ARCHITECTURE.md  STREAMLIT_DEMO.md  WHY_AGENTS_DIAGRAM.md  cli-usage.md  configuration.md  development.md  getting-started.md  observability.md  project-description-kaggle.md  testing.md  troubleshooting.md
models/: __init__.py  book.py  discovery.py  itinerary.py  preferences.py
plugins/: __init__.py  observability.py
services/: __init__.py  context_manager.py  memory_service.py  session_service.py
tests/: __init__.py  conftest.py
tests/evaluation/: eval_config.json
tests/unit/: __init__.py  test_agents.py  test_models.py  test_services.py  test_tools.py  test_workflow_timeout.py
tools/: __init__.py  google_books.py  preferences.py
